--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="col-xs-12 fifty-years-news">
                         <div class="row text-center">
                             <div class="Listen-up News .glyphicon news bg-color-yellow-dark">
-                                <h2><span class="glyphicon glyphicon-headphones hidden-xs"></span> Listen Up! </h2>
+                                <h2><span class="glyphicon glyphicon-headphones hidden-xs"></span> Listen Up! <span class="glyphicon glyphicon-headphones hidden-xs"></span></h2>
                                 <div class="block-divider--hot-news"></div>
                                     <p> 
                                         To celebrate the band's 50th anniversary, they released a record called <a href="music.html">Good Times</a>.
