--- a/heyhey.html
+++ b/heyhey.html
@@ -85,7 +85,7 @@
         <div class="slideshow-container bg-color-yellow">
 
             <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
+            <div class="band-images-heyhey mySlides fade">
                 <img src="assets/myimages/Carousel-images/Pic1.jpg" alt="The Monkees Pic 1" style="">
             </div>
 
