--- a/music.html
+++ b/music.html
@@ -81,7 +81,7 @@
                 <!-- Track 1 -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 text-center music-background">
                     <div class="text-center audio-column">
-                        <img src="assets/myimages/Last Train to Clarksville.jpg" alt="Album cover 'The Monkees'" class="album-cover-image-music">
+                        <img src="assets/myimages/LastTraintoClarksville.jpg" alt="Album cover 'The Monkees'" class="album-cover-image-music">
                     </div>
                     <audio controls="" class="sound-control">
                          <source src="assets/audio/Clarksville.mp3" type="audio/mp3">
@@ -92,7 +92,7 @@
                 <!-- Track 2 -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 text-center music-background">
                     <div class="text-center audio-column">
-                        <img src="assets/myimages/Daydream Believer.jpg" alt="Album cover 'Bird Bees & Monkees'" class="album-cover-image-music">
+                        <img src="assets/myimages/DaydreamBeliever.jpg" alt="Album cover 'Bird Bees & Monkees'" class="album-cover-image-music">
                     </div>
                     <audio controls="" class="sound-control">
                          <source src="assets/audio/DaydreamBeliever.mp3" type="audio/mp3">
@@ -103,7 +103,7 @@
                 <!-- Track 3 -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 text-center music-background">
                     <div class="text-center audio-column">
-                        <img src="assets/myimages/I'm a Believer.jpg" alt="Album cover 'The Monkees" class="album-cover-image-music">
+                        <img src="assets/myimages/ImaBeliever.jpg" alt="Album cover 'The Monkees" class="album-cover-image-music">
                     </div>
                     <audio controls="" class="sound-control">
                          <source src="assets/audio/ImABeliever.mp3" type="audio/mp3">
@@ -114,7 +114,7 @@
                 <!-- Track 4 -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 text-center music-background">
                     <div class="text-center audio-column">
-                        <img src="assets/myimages/Stepping Stone.jpg" alt="Album cover '(I-I-I-I-I'm Not Your) Steppin' Stone'" class="album-cover-image-music">
+                        <img src="assets/myimages/SteppingStone.jpg" alt="Album cover '(I-I-I-I-I'm Not Your) Steppin' Stone'" class="album-cover-image-music">
                     </div>
                     <audio controls="" class="sound-control">
                          <source src="assets/audio/SteppingStone.mp3" type="audio/mp3">
@@ -133,111 +133,114 @@
         </div>
         <!-- Slideshow container -->
         <div class="container-fluid slideshow-container">
-
+            <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
             <!-- Full-width Album images, production year & producer -->
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/The Monkees 1966.png" alt="The Monkees" style="">
+                <img src="assets/myimages/Carousel-images/TheMonkees1966.jpg" alt="The Monkees" style="">
                 <div class="caption-container-music">
                     <p id="caption">1966 - The Monkees (Rhino)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/More of The Monkees 1967.png" alt="More of The Monkees" style="">
+                <img src="assets/myimages/Carousel-images/MoreofTheMonkees1967.jpg" alt="More of The Monkees" style="">
                 <div class="caption-container-music">
                     <p id="caption">1967 - More of The Monkees (Rhino)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/Headquarters 1967.png" alt="Headquarters" style="">
+                <img src="assets/myimages/Carousel-images/Headquarters1967.jpg" alt="Headquarters" style="">
                 <div class="caption-container-music">
                     <p id="caption">1967 - Headquarters (Rhino)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/PAC&J Ltd 1967.png" alt="Pisces Aquarius Capricorn & Jones Ltd" style="">
+                <img src="assets/myimages/Carousel-images/PAC&JLtd1967.jpg" alt="Pisces Aquarius Capricorn & Jones Ltd" style="">
                 <div class="caption-container-music">
                     <p id="caption">1967 - Pisces, Aquarius, Capricorn & Jones Ltd (Arista)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/Birds Bees & Monkees 1968.png" alt="Birds Bees & Monkees 1968" style="">
+                <img src="assets/myimages/Carousel-images/BirdsBees&Monkees1968.jpg" alt="Birds Bees & Monkees 1968" style="">
                 <div class="caption-container-music">
                     <p id="caption">1968 - The Birds, The Bees & The Monkees (Rhino)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/Head 1968.jpg" alt="Head" style="">
+                <img src="assets/myimages/Carousel-images/Head1968.jpg" alt="Head" style="">
                 <div class="caption-container-music">
                     <p id="caption">1968 - Head (Rhino)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/Instant Replay 1969.png" alt="Instant Replay 1969" style="">
+                <img src="assets/myimages/Carousel-images/InstantReplay1969.jpg" alt="Instant Replay 1969" style="">
                 <div class="caption-container-music">
                     <p id="caption">1969 - Instant Replay (Rhino)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/The Monkees Present 1969.jpg" alt="The Monkees Present 1969" style="">
+                <img src="assets/myimages/Carousel-images/TheMonkeesPresent1969.jpg" alt="The Monkees Present 1969" style="">
                 <div class="caption-container-music">
                     <p id="caption">1969 - The Monkees Present (Rhino)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/Changes 1970.png" alt="Changes 1970" style="">
+                <img src="assets/myimages/Carousel-images/Changes1970.jpg" alt="Changes 1970" style="">
                 <div class="caption-container-music">
                     <p id="caption">1970 - Changes (Rhino)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/20th Anniversary Tour 1986.jpg" alt="20th Anniversary Tour 1986" style="">
+                <img src="assets/myimages/Carousel-images/20thAnniversaryTour1986.jpg" alt="20th Anniversary Tour 1986" style="">
                 <div class="caption-container-music">
                     <p id="caption">1986 - 20th Anniversary Tour (Rhino)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/Pool it 1987.png" alt="Pool it 1987" style="">
+                <img src="assets/myimages/Carousel-images/Poolit1987.jpg" alt="Pool it 1987" style="">
                 <div class="caption-container-music">
                     <p id="caption">1987 - Pool it (Rhino)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/Concert in Japan 1996.jpg" alt="Concert in Japan 1996" style="">
+                <img src="assets/myimages/Carousel-images/ConcertinJapan1996.jpg" alt="Concert in Japan 1996" style="">
                 <div class="caption-container-music">
                     <p id="caption">1996 - Concert in Japan (Varese)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/Justus 1996.png" alt="Justus 1996" style="">
+                <img src="assets/myimages/Carousel-images/Justus1996.jpg" alt="Justus 1996" style="">
                 <div class="caption-container-music">
                     <p id="caption">1996 - Justus (Rhino)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/Live Summer Tour 2002.jpg" alt="Live Summer Tour 2002" style="">
+                <img src="assets/myimages/Carousel-images/LiveSummerTour2002.jpg" alt="Live Summer Tour 2002" style="">
                 <div class="caption-container-music">
                     <p id="caption">2002 - Live Summer Tour (WIN Media)</p>
                 </div>
             </div>
 
             <div class="album-cover-disco mySlides fade">
-                <img src="assets/myimages/Carousel-images/Good Times 2016.jpg" alt="Good Times 2016" style="">
+                <img src="assets/myimages/Carousel-images/GoodTimes2016.jpg" alt="Good Times 2016" style="">
                 <div class="caption-container-music">
                     <p id="caption">2016 - Good Times (Rhino / Warner Bros)</p>
                 </div>
+            </div>
+            </div>
             </div>
         </div>
         <!--/Slideshow container-->
