--- a/eventsandtickets.html
+++ b/eventsandtickets.html
@@ -87,7 +87,7 @@
                             <td>Mar 2nd</td>
                             <td>Atlantic City, NJ (US)</td>
                             <td>Ocean Resort Casino</td>
-                            <td><button class="btn btn-sm btn-cta btn-red" data-toggle='modal' data-target='#TicketModal'>Last Remaining</button></td>
+                            <td><button class="btn btn-sm btn-cta btn-red" data-toggle='modal' data-target='#TicketModal'>Last Chance</button></td>
                         </tr>
                         <tr>
                             <td>Mar 3rd</td>
@@ -105,7 +105,7 @@
                             <td>Mar 6th</td>
                             <td>Glenside, PA (US)</td>
                             <td>Keswick Theatre</td>
-                            <td><button class="btn btn-sm btn-cta btn-red" data-toggle='modal' data-target='#TicketModal'>Last Remaining</button></td>
+                            <td><button class="btn btn-sm btn-cta btn-red" data-toggle='modal' data-target='#TicketModal'>Last Chance</button></td>
                         </tr>
                         <tr>
                             <td>Mar 8th</td>
@@ -129,7 +129,7 @@
                             <td>Mar 12th</td>
                             <td>Royal Oak, MI (US)</td>
                             <td>Royal Oak Theatre</td>
-                            <td><button class="btn btn-sm btn-cta btn-red" data-toggle='modal' data-target='#TicketModal'>Last Remaining</button></td>
+                            <td><button class="btn btn-sm btn-cta btn-red" data-toggle='modal' data-target='#TicketModal'>Last Chance</button></td>
                         </tr>
                         <tr>
                             <td>Mar 14th</td>
@@ -141,7 +141,7 @@
                             <td>Mar 15th</td>
                             <td>New Buffalo, MI (US)</td>
                             <td>Silver Creek Event Theatre</td>
-                            <td><button class="btn btn-sm btn-cta btn-red" data-toggle='modal' data-target='#TicketModal'>Last Remaining</button></td>
+                            <td><button class="btn btn-sm btn-cta btn-red" data-toggle='modal' data-target='#TicketModal'>Last Chance</button></td>
                         </tr>
                         <tr>
                             <td>Jun 8th</td>
@@ -153,7 +153,7 @@
                             <td>Jun 9th</td>
                             <td>Auckland, NZ </td>
                             <td>Great Hall</td>
-                            <td><button class="btn btn-sm btn-cta btn-red" data-toggle='modal' data-target='#TicketModal'>Last Remaining</button></td>
+                            <td><button class="btn btn-sm btn-cta btn-red" data-toggle='modal' data-target='#TicketModal'>Last Chance</button></td>
                         </tr>
                         <tr>
                             <td>Jun 10th</td>
