--- a/music.html
+++ b/music.html
@@ -58,9 +58,9 @@
                 <div class="row">
                     <div class="col-xs-12 video-image">
                         <iframe width="600" height="320" src="https://www.youtube.com/embed/T5Q_FbVf0Cs?controls=1">
-                        <p>Your browser does not support iframes.</p>
+                        
                     </iframe>
-                        <source src="movie.ogg" type="video/ogg">
+                        
                     </div>
                 </div>
             </div>
@@ -139,105 +139,105 @@
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/TheMonkees1966.jpg" alt="The Monkees" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1966 - The Monkees (Rhino)</p>
+                        <p id="cover1">1966 - The Monkees (Rhino)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/MoreofTheMonkees1967.jpg" alt="More of The Monkees" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1967 - More of The Monkees (Rhino)</p>
+                        <p id="cover2">1967 - More of The Monkees (Rhino)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/Headquarters1967.jpg" alt="Headquarters" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1967 - Headquarters (Rhino)</p>
+                        <p id="cover3">1967 - Headquarters (Rhino)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/PAC&JLtd1967.jpg" alt="Pisces Aquarius Capricorn & Jones Ltd" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1967 - Pisces, Aquarius, Capricorn & Jones Ltd (Arista)</p>
+                        <p id="cover4">1967 - Pisces, Aquarius, Capricorn & Jones Ltd (Arista)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/BirdsBees&Monkees1968.jpg" alt="Birds Bees & Monkees 1968" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1968 - The Birds, The Bees & The Monkees (Rhino)</p>
+                        <p id="cover5">1968 - The Birds, The Bees & The Monkees (Rhino)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/Head1968.jpg" alt="Head" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1968 - Head (Rhino)</p>
+                        <p id="cover6">1968 - Head (Rhino)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/InstantReplay1969.jpg" alt="Instant Replay 1969" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1969 - Instant Replay (Rhino)</p>
+                        <p id="cover7">1969 - Instant Replay (Rhino)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/TheMonkeesPresent1969.jpg" alt="The Monkees Present 1969" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1969 - The Monkees Present (Rhino)</p>
+                        <p id="cover8">1969 - The Monkees Present (Rhino)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/Changes1970.jpg" alt="Changes 1970" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1970 - Changes (Rhino)</p>
+                        <p id="cover9">1970 - Changes (Rhino)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/20thAnniversaryTour1986.jpg" alt="20th Anniversary Tour 1986" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1986 - 20th Anniversary Tour (Rhino)</p>
+                        <p id="cover10">1986 - 20th Anniversary Tour (Rhino)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/Poolit1987.jpg" alt="Pool it 1987" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1987 - Pool it (Rhino)</p>
+                        <p id="cover11">1987 - Pool it (Rhino)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/ConcertinJapan1996.jpg" alt="Concert in Japan 1996" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1996 - Concert in Japan (Varese)</p>
+                        <p id="cover12">1996 - Concert in Japan (Varese)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/Justus1996.jpg" alt="Justus 1996" style="">
                     <div class="caption-container-music">
-                        <p id="caption">1996 - Justus (Rhino)</p>
+                        <p id="cover13">1996 - Justus (Rhino)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/LiveSummerTour2002.jpg" alt="Live Summer Tour 2002" style="">
                     <div class="caption-container-music">
-                        <p id="caption">2002 - Live Summer Tour (WIN Media)</p>
+                        <p id="cover14">2002 - Live Summer Tour (WIN Media)</p>
                     </div>
                 </div>
 
                 <div class="album-cover-disco mySlides fade">
                     <img src="assets/myimages/Carousel-images/GoodTimes2016.jpg" alt="Good Times 2016" style="">
                     <div class="caption-container-music">
-                        <p id="caption">2016 - Good Times (Rhino / Warner Bros)</p>
+                        <p id="cover15">2016 - Good Times (Rhino / Warner Bros)</p>
                     </div>
                 </div>
             </div>
@@ -284,7 +284,11 @@
         <div class="container-fluid bg-color-lower-footer lower-footer-style">
             <div class="row">
                 <div class="col-12-xs text-center lower-footer-style">
-                    <p>&copy; The Monkees 2019 - Website design Paul Friel</p>
+                    <p>&copy; The Monkees 2019 - Website design Paul Friel - <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                        <img style="border:0;width:43px;height:15px"
+                            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                                alt="Valid CSS!" />
+                    </a></p>
                 </div>
             </div>
         </div>
