--- a/heyhey.html
+++ b/heyhey.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale-1.0">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, viewport-fit=cover">
     <!-- Mobile 1st Design -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
@@ -82,6 +82,7 @@
             </div>
         </div>
         <!-- Slideshow container -->
+       
         <div class="slideshow-container bg-color-yellow">
 
             <!-- Full-width images with number and caption text -->
@@ -92,9 +93,7 @@
             <div class="band-images-heyhey mySlides fade">
                 <img src="assets/myimages/Carousel-images/dj.jpg" alt="Davy Jones" style="">
                 <div class="caption-container-heyhey">
-                    <p id="dj1">David Thomas Jones (30 December 1945 – 29 February 2012) was an English singer-songwriter, musician, actor and businessman, best known as a member of the band the Monkees, and for starring in the TV series of the same name. His acting
-                        credits include a Tony-nominated role as the Artful Dodger in the original London and Broadway productions of Oliver! as well as a guest star role in a hallmark episode of The Brady Bunch television show and later reprised parody
-                        film; Love, American Style; and My Two Dads. Jones is considered one of the great teen idols.</p>
+                    <p id="dj1">David Thomas Jones (30 December 1945 – 29 February 2012)</p>
                 </div>
                 </div>
 
@@ -109,8 +108,7 @@
             <div class="band-images-heyhey mySlides fade">
                 <img src="assets/myimages/Carousel-images/mn.jpg" alt="Mike Nesmith" style="">
                 <div class="caption-container-heyhey">
-                    <p id="mn1">Robert Michael Nesmith (born December 30, 1942) is an American musician, songwriter, actor, producer, novelist, businessman, and philanthropist, best known as a member of the pop rock band the Monkees and co-star of the TV series The
-                        Monkees (1966–1968). Nesmith's songwriting credits include "Different Drum" (sung by Linda Ronstadt with the Stone Poneys). </p>
+                    <p id="mn1">Robert Michael Nesmith (born December 30, 1942)</p>
                 </div>
                 </div>
 
@@ -125,15 +123,14 @@
             <div class="band-images-heyhey mySlides fade">
                 <img src="assets/myimages/Carousel-images/md.jpg" alt="Micky Dolenz" style="">
                 <div class="caption-container-heyhey">
-                    <p id="md1">George Michael Dolenz Jr. (born March 8, 1945) is an American actor, musician, television director, radio personality and theatre director, best known as a vocalist and drummer of the 1960s pop/rock band the Monkees.</p>
+                    <p id="md1">George Michael Dolenz Jr. (born March 8, 1945)</p>
                 </div>
                 </div>
 
             <div class="band-images-heyhey mySlides fade">
                 <img src="assets/myimages/Carousel-images/Pic4.jpg" alt="The Monkees Pic 4" style="">
                 <div class="caption-container-heyhey">
-                    <p id="md2">"It was a television show about imaginary characters," Dolenz said, citing John Lennon's comparison of them to the Marx Brothers. "I was an actor-musician, like Miley Cyrus, and I was cast into this show playing a wacky drummer. That's
-                        how I've looked at it. Whenever I go back on the road or do television, to some degree, I'm going back to playing that character." (2016)</p>
+                    <p id="md2">"I was an actor-musician, like Miley Cyrus, and I was cast into this show playing a wacky drummer (2016)</p>
                     <footer><cite><strong>Micky Dolenz</strong></cite></footer>
                 </div>
                 </div>
@@ -141,7 +138,7 @@
             <div class="band-images-heyhey mySlides fade">
                 <img src="assets/myimages/Carousel-images/pt.jpg" alt="Peter Tork" style="">
                 <div class="caption-container-heyhey">
-                    <p id="pt1">Peter Halsten Thorkelson (born February 13, 1942), better known as Peter Tork, is an American musician and actor, best known as the keyboardist and bass guitarist of the Monkees.</p>
+                    <p id="pt1">Peter Halsten Thorkelson (born February 13, 1942)</p>
                 </div>
                 </div>
 
@@ -153,6 +150,7 @@
                 </div>
                 </div>
         </div>
+        
         <!--/Slideshow container-->
         <!--The dots/circles-->
         <div class="container-fluid dots-circles bg-color-green">
