--- a/heyhey.html
+++ b/heyhey.html
@@ -101,7 +101,7 @@
                 <img src="assets/myimages/Carousel-images/Pic2.jpg" alt="The Monkees Pic 2" style="">
                 <div class="caption-container-heyhey">
                     <p id="dj2">"Once you're in, you're in. It's like the Mafia. Once a Monkee, always a Monkee." (1967)</p>
-                    <footer><cite><strong>Davy Jones</strong></cite></footer>
+                    <footer><cite><strong>Davy Jones - Vocals</strong></cite></footer>
                 </div>
                 </div>
 
@@ -116,7 +116,7 @@
                 <img src="assets/myimages/Carousel-images/Pic3.jpg" alt="The Monkees Pic 3" style="">
                 <div class="caption-container-heyhey">
                     <p id="mn2">"Hey, wait a minute, guys, you know what? It's seven thirty, six thirty central time. It's time for The Monkees. I wonder if anybody around here has got a television set?" (1968)</p>
-                    <footer><cite><strong>Mike Nesmith</strong></cite></footer>
+                    <footer><cite><strong>Mike Nesmith - Vocals & Guitar</strong></cite></footer>
                 </div>
                 </div>
 
@@ -131,7 +131,7 @@
                 <img src="assets/myimages/Carousel-images/Pic4.jpg" alt="The Monkees Pic 4" style="">
                 <div class="caption-container-heyhey">
                     <p id="md2">"I was an actor-musician, like Miley Cyrus, and I was cast into this show playing a wacky drummer (2016)</p>
-                    <footer><cite><strong>Micky Dolenz</strong></cite></footer>
+                    <footer><cite><strong>Micky Dolenz - Vocals & Drums</strong></cite></footer>
                 </div>
                 </div>
 
@@ -146,7 +146,7 @@
                 <img src="assets/myimages/Carousel-images/Pic5.jpg" alt="The Monkees Pic 5" style="">
                 <div class="caption-container-heyhey">
                     <p id="pt2">"Vampires!!! What a time to be caught without a turtleneck!" (1967)</p>
-                    <footer><cite><strong>Peter Tork</strong></cite></footer>
+                    <footer><cite><strong>Peter Tork - Vocals, Base Guitar & Keyboard</strong></cite></footer>
                 </div>
                 </div>
         </div>
