--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="col-xs-12 fifty-years-news">
                     <div class="row text-center">
                         <div class="Listen-up News .glyphicon news bg-color-yellow-dark">
-                            <h2><span class="glyphicon glyphicon-headphones hidden-xs"></span> Listen Up! <span class="glyphicon glyphicon-headphones hidden-xs"></span></h2>
+                            <h2><span class="glyphicon glyphicon-headphones"></span> Listen Up! <span class="glyphicon glyphicon-headphones"></span></h2>
                             <div class="block-divider--hot-news"></div>
                             <p>
                                 To celebrate the band's 50th anniversary, they released a record called <a href="music.html">Good Times</a>. It's their first new album in 20 years and the first since the passing of former band heartthrob Davy Jones in
@@ -89,17 +89,17 @@
                             </div>
                             <div class="block-divider--hot-news"></div>
                             <div class="News .glyphicon news">
-                                <h4><span class="glyphicon glyphicon-pencil hidden-xs"></span>US Tour</h4>
+                                <h4><span class="glyphicon glyphicon-pencil"></span>US Tour</h4>
                             </div>
                             <p>(1 Mar - 15 Mar)</p>
                             <div class="block-divider--hot-news"></div>
                             <div class="News .glyphicon news">
-                                <h4><span class="glyphicon glyphicon-pencil hidden-xs"></span>New Zealand Tour</h4>
+                                <h4><span class="glyphicon glyphicon-pencil"></span>New Zealand Tour</h4>
                             </div>
                             <p>(8 Jun - 10 Jun)</p>
                             <div class="block-divider--hot-news"></div>
                             <div class="News .glyphicon news">
-                                <h4><span class="glyphicon glyphicon-pencil hidden-xs"></span>Australia Tour</h4>
+                                <h4><span class="glyphicon glyphicon-pencil"></span>Australia Tour</h4>
                             </div>
                             <p>(15 Jun)</p>
                         </div>
@@ -241,7 +241,7 @@
                     <li><a href="https://open.spotify.com/artist/320EPCSEezHt1rtbfwH6Ck/" target="_blank"><i class="fa icon-footer fa-spotify"></i></a></li>
                 </ul>
             </div>
-            
+
         </div>
         <!--/social Media-->
 
