--- a/heyhey.html
+++ b/heyhey.html
@@ -83,7 +83,7 @@
         </div>
         <!-- Slideshow container -->
 
-        <div class="slideshow-container bg-color-yellow">
+        <div class="slideshow-container none bg-color-yellow">
 
             <!-- Full-width images with number and caption text -->
             <div class="band-images-heyhey mySlides fade">
